Added new file to control database configuration parameters during execution

--- a/alfresco-5.0.d/Dockerfile
+++ b/alfresco-5.0.d/Dockerfile
@@ -24,13 +24,13 @@ RUN $ALF_INSTALL_BIN \
   --unattendedmodeui none \
   --mode unattended \
   --debuglevel 2 \
-  --enable-components javaalfresco,alfrescosolr4,postgres,libreofficecomponent \
-  --disable-components alfrescosolr,alfrescowcmqs,alfrescosharepoint,alfrescogoogledocs \
-  --jdbc_url "jdbc:postgresql://localhost/alfresco?useUnicode=yes&characterEncoding=UTF-8" \
+  --enable-components javaalfresco,alfrescosolr4,libreofficecomponent \
+  --disable-components postgres,alfrescosolr,alfrescowcmqs,alfrescosharepoint,alfrescogoogledocs \
+  --jdbc_url "jdbc:postgresql://t450:5432/alfresco?useUnicode=yes&characterEncoding=UTF-8" \
   --jdbc_driver org.postgresql.Driver \
   --jdbc_database alfresco \
   --jdbc_username postgres \
-  --jdbc_password postgres \
+  --jdbc_password password \
   --alfresco_admin_password pass \
   --baseunixservice_install_as_service 0 \
   --alfrescocustomstack_services_startup demand
